# FLARE25-QWen3VL-4B

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  upload_to_hf.py
Qwen3-VL/qwen-vl-finetune/: TRAINING.md
Qwen3-VL/qwen-vl-finetune/evaluation/: QUICKSTART.md  README.md  VISUALIZATION.md  check_progress.sh  evaluate_flare25.py  metrics.py  recompute_metrics.py  run_evaluation.sh  task_utils.py  test_evaluation.py  visualize_results.py
Qwen3-VL/qwen-vl-finetune/qwenvl/data/: __init__.py  data_processor.py
Qwen3-VL/qwen-vl-finetune/qwenvl/train/: argument.py
Qwen3-VL/qwen-vl-finetune/scripts/: dry_run.sh  monitor_training.py  sft_qwen3_4b_flare.sh  sft_qwen3_4b_flare_full.sh  test_data_loading.py  zero3_offload.json
data_conversion/: README.md  convert_flare_to_qwen3vl.py  dataset_configs.py  validate_conversion.py
