[project]
name = "flare25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "argparse>=1.4.0",
    "deepspeed>=0.18.0",
    "flash-attn>=2.8.3",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "typing>=3.10.0.0",
    "wandb>=0.22.2",
]
